Added max query size to download modal when exceeded
